Backport code to Java 8